more dark mode ui fixes

--- a/app/assets/stylesheets/dark-mode.scss
+++ b/app/assets/stylesheets/dark-mode.scss
@@ -272,5 +272,9 @@ body {
 		.tribute-container ul {
 			background-color: #2D2D31;
 		}
+
+		.iconpicker-search {
+			color: black;
+		}
 	}
 }
